--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
     "license" : "MIT",
     "require": {
         "php" : ">=5.4.0",
-        "illuminate/support" : "5.*|6.0.*|7.0.*",
-        "illuminate/routing": "5.*|6.0.*|7.0.*",
-        "illuminate/console": "5.*|6.0.*|7.0.*",
-        "illuminate/config": "5.*|6.0.*|7.0.*",
-        "illuminate/filesystem": "5.*|6.0.*|7.0.*"
+        "illuminate/support" : "5.*|^6.0|^7.0",
+        "illuminate/routing": "5.*|^6.0|^7.0",
+        "illuminate/console": "5.*|^6.0|^7.0",
+        "illuminate/config": "5.*|^6.0|^7.0",
+        "illuminate/filesystem": "5.*|^6.0|^7.0"
     },
     "require-dev" : {
         "phpunit/phpunit" : "~4.0",
